--- a/src/app/views/dashboards/dashboard4.template.html
+++ b/src/app/views/dashboards/dashboard4.template.html
@@ -88,13 +88,13 @@
             <div class="row">
               <div class="col-md-8">
                 <div>
-                  <canvas baseChart height="114"
+                  <!--<canvas baseChart height="114"
                           [datasets]="lineChartData"
                           [labels]="lineChartLabels"
                           [options]="lineChartOptions"
                           [chartType]="lineChartType"
                           [colors]="lineChartColors">
-                  </canvas>
+                  </canvas>-->
                 </div>
               </div>
               <div class="col-md-4">
