--- a/src/app/views/dashboards/dashboard3.template.html
+++ b/src/app/views/dashboards/dashboard3.template.html
@@ -98,7 +98,7 @@
             <small>Sales marketing.</small>
           </div>
 
-          <div>
+          <!--<div>
             <canvas baseChart height="70"
                     [datasets]="lineChartData"
                     [labels]="lineChartLabels"
@@ -106,7 +106,7 @@
                     [chartType]="lineChartType"
                     [colors]="lineChartColors">
             </canvas>
-          </div>
+          </div>-->
 
           <div class="m-t-md">
             <small class="pull-right">
