--- a/src/app/views/appviews/admin/users.template.html
+++ b/src/app/views/appviews/admin/users.template.html
@@ -1,7 +1,22 @@
 <div class="wrapper wrapper-content">
 
-  <div class="ibox-content text-center animated fadeInDown">
-    <div class="table-responsive">
+
+  <div class="ibox-title"><h4>Usuarios de Narachi</h4></div>
+
+
+  <div class="ibox-content text-center">
+
+    <div class="spiner-example" *ngIf="Loading">
+      <div class="sk-spinner sk-spinner-three-bounce form-group">
+        <div class="sk-bounce1"></div>
+        <div class="sk-bounce2"></div>
+        <div class="sk-bounce3"></div>
+      </div>
+
+
+    </div>
+
+    <div class="table-responsive animated fadeInDown" *ngIf="!Loading">
       <table class="table table-striped table-bordered table-hover dataTables-example text-center">
         <thead>
           <tr>
@@ -11,6 +26,7 @@
             <th style="text-align: center">Apellido</th>
             <th style="text-align: center">Edad</th>
             <th style="text-align: center">Miembro Desde</th>
+            <th style="text-align: center">Registros</th>
             <th style="text-align: center">Administración</th>
           </tr>
         </thead>
@@ -25,6 +41,7 @@
             <td>{{u.Apellido ? u.Apellido : "—" }}</td>
             <td>{{setFecha(u.Edad) + " / " + getAge(u.Edad)}}</td>
             <td>{{setFecha(u.FechaCreacion)}}</td>
+            <td><button class="btn btn-default btn-circle" type="button" (click)="getRecordsOfUser(u)"> <i class="fas fa-book"></i> </button></td>
             <td><button class="btn btn-default btn-circle" type="button" data-toggle="modal" data-target="#modalUser" (click)="User = u"> <i class="fa fa-cog"></i> </button></td>
           </tr>
         </tbody>
@@ -36,6 +53,87 @@
 
 
 </div>
+
+<div class="spiner-example" *ngIf="LoadingRecords">
+  <div class="sk-spinner sk-spinner-three-bounce form-group">
+    <div class="sk-bounce1"></div>
+    <div class="sk-bounce2"></div>
+    <div class="sk-bounce3"></div>
+  </div>
+
+
+</div>
+
+<div class="wrapper wrapper-content animated fadeInDown" *ngIf="Registros.length > 0">
+  <div class="ibox-title"><h4>Registros de {{user}} <i class="fa fa-times fa-1x" style="float: right; cursor: pointer" (click)="clearList()"></i></h4> </div>
+
+  <div class="ibox-content">
+
+    <div class="table-responsive animated fadeInDown" *ngIf="Registros.length > 0 && !LoadingRecords">
+      <table class="table table-striped table-bordered table-hover dataTables-example text-center">
+        <thead>
+          <tr>
+            <th class="text-center">Campeon</th>
+            <th class="text-center">Enemigo</th>
+            <th class="text-center">Registro</th>
+            <th class="text-center" *ngIf="!anyRecordEditing()"></th>
+            <th class="text-center"></th>
+            <th class="text-center" *ngIf="anyRecordEditing()"></th>
+            <th class="text-center" *ngIf="anyRecordEditing()"></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let r of Registros" style="cursor: pointer;">
+
+            <td width="1" class="text-center" style="vertical-align: middle;">
+              <div>
+                <img src="assets/Champions/{{r.Campeon.Nombre}}.png" width="30" height="30" *ngIf="r.Campeon" title="{{r.Campeon.Nombre}}" />
+                <label *ngIf="!r.Campeon">—</label>
+              </div>
+            </td>
+
+            <td width="1" class="text-center" style="vertical-align: middle;">
+              <img *ngIf="r.Enemigo" src="assets/Champions/{{r.Enemigo.Nombre}}.png" width="30" height="30" title="{{r.Enemigo.Nombre}}" />
+              <label *ngIf="!r.Enemigo">—</label>
+            </td>
+
+            <td (dblclick)="r.Edit = true">
+              <label *ngIf="!r.Edit">{{r.Error}}</label>
+
+              <textarea class="form-control" *ngIf="r.Edit" style="text-align: center;" [(ngModel)]="r.Error">{{r.Error}}</textarea>
+            </td>
+
+            <td width="1" style="vertical-align: middle;">
+              <a *ngIf="!r.Edit" class="btn btn-white btn-bitbucket" (click)="r.Edit = true"> <i class="fas fa-edit"></i></a>
+              <a *ngIf="r.Edit" class="btn btn-white btn-bitbucket" (click)="updateRecord(r)"> <i class="fas fa-check" ></i></a>
+            </td>
+
+
+
+
+
+            <td width="1" style="vertical-align: middle;" *ngIf="anyRecordEditing()">
+              <a *ngIf="r.Edit" class="btn btn-white btn-bitbucket" (click)="r.Edit = false"> <i class="fas fa-times"></i></a>
+            </td>
+
+            <td width="1" style="vertical-align: middle;">
+              <a class="btn btn-white btn-bitbucket" (click)="SelectedRecord = r" data-toggle="modal" data-target="#modalDelete"> <i class="fas fa-trash"></i></a>
+            </td>
+
+          </tr>
+
+
+        </tbody>
+
+      </table>
+    </div>
+
+
+
+  </div>
+
+</div>
+
 
 
 <div class="modal inmodal" id="modalUser" tabindex="-1" role="dialog" aria-hidden="true">
@@ -72,6 +170,10 @@
 
             <div class="form-group">
               <input class="form-control" type="text" placeholder="Nickname" name="User.Nickname" [(ngModel)]="User.Nickname" />
+            </div>
+
+            <div class="form-group">
+              <input class="form-control" type="email" placeholder="Correo" name="User.Correo" [(ngModel)]="User.Correo" />
             </div>
 
             <div class="form-group">
@@ -118,3 +220,26 @@
   </div>
 </div>
 
+<div class="modal inmodal" id="modalDelete" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+
+    <div class="modal-content animated fadeInDown text-center">
+
+      <div class="modal-body">
+
+        <div class="form-group">
+          <label>¿Estás seguro de eliminar este registro?</label>
+        </div>
+        <div class="form-group">
+          <button type="button" class="btn btn-danger" (click)="deleteRecord(SelectedRecord.Id)" data-dismiss="modal"><i class="fa fa-trash"></i> ELIMINAR</button>
+        </div>
+
+
+
+      </div>
+
+
+
+    </div>
+  </div>
+</div>
