--- a/src/app/views/appviews/login/login.template.html
+++ b/src/app/views/appviews/login/login.template.html
@@ -11,7 +11,7 @@
         </div>
         <div class="form-group">
           <label>Contraseña</label>
-          <input type="password" class="form-control" placeholder="Password" required="" [(ngModel)]="UserLogin.Password">
+          <input type="password" class="form-control" placeholder="Password" required="" [(ngModel)]="UserLogin.Password" (keyup.enter)="Login()">
         </div>
         <button type="submit" class="btn btn-success block full-width m-b" (click)="Login()"><i class="fas fa-door-open"></i> Login</button>
 
