--- a/src/app/views/appviews/profile/profile.template.html
+++ b/src/app/views/appviews/profile/profile.template.html
@@ -3,13 +3,14 @@
 
   <div class="wrapper wrapper-content animated fadeInDown">
 
-    <div class="tabs-container animated fadeInUp">
-      <ul class="nav nav-tabs" role="tablist">
-        <li><a  class="nav-link" [ngClass]="{'nav-link active': Profile}" data-toggle="tab" (click)="Profile = true"> <i class="fa fa-user-circle"></i> Perfil</a></li>
-        <li><a  class="nav-link" [ngClass]="{'nav-link active': !Profile}" data-toggle="tab" (click)="Profile = false"> <i class="fa fa-key"></i> Cambiar Contraseña</a></li>
+    <div class="tabs-container">
+      <ul class="nav nav-tabs asdasd" role="tablist">
+        <li> <a class="nav-link active" data-toggle="tab" href="#tab-1"> <i class="fa fa-user-circle"></i> Perfil </a> </li>
+
+        <li> <a class="nav-link"  data-toggle="tab" href="#tab-2"> <i class="fa fa-key"></i> Cambiar Contraseña  </a> </li>
       </ul>
       <div class="tab-content">
-        <div role="tabpanel" class="tab-pane active" *ngIf="Profile">
+        <div role="tabpanel" id="tab-1" class="tab-pane active">
           <div class="panel-body">
 
             <div class="form-group text-center">
@@ -44,7 +45,7 @@
                   </span>
                 </div>
               </div>
-             
+
             </div>
 
             <div class="row form-group">
@@ -80,23 +81,22 @@
 
           </div>
         </div>
-        </div>
-        <div role="tabpanel" id="tab-2" class="tab-pane" *ngIf="!Profile">
+        <div role="tabpanel" id="tab-2" class="tab-pane">
           <div class="panel-body">
 
 
-              <div class="form-group">
-                <label>Contraseña actual</label>
-                <input type="password" class="form-control" name="User.Password" [(ngModel)]="User.Password" />
-              </div>
-              <div class="form-group">
-                <label>Nueva contraseña</label>
-                <input type="password" class="form-control" name="User.PasswordNew" [(ngModel)]="User.PasswordNew" />
-              </div>
-              <div class="form-group">
-                <label>Confirmar contraseña</label>
-                <input type="password" class="form-control" name="User.Repeat" [(ngModel)]="User.Repeat" />
-              </div>
+            <div class="form-group">
+              <label>Contraseña actual</label>
+              <input type="password" class="form-control" name="User.Password" [(ngModel)]="User.Password" />
+            </div>
+            <div class="form-group">
+              <label>Nueva contraseña</label>
+              <input type="password" class="form-control" name="User.PasswordNew" [(ngModel)]="User.PasswordNew" />
+            </div>
+            <div class="form-group">
+              <label>Confirmar contraseña</label>
+              <input type="password" class="form-control" name="User.Repeat" [(ngModel)]="User.Repeat" />
+            </div>
 
 
             <div class="form-group">
@@ -107,6 +107,8 @@
           </div>
         </div>
       </div>
+     
+    </div>
 
 
     </div>
