--- a/src/app/views/appviews/records/list.template.html
+++ b/src/app/views/appviews/records/list.template.html
@@ -4,98 +4,96 @@
     <ul class="nav nav-tabs asdasd" role="tablist">
       <li> <a class="nav-link active" data-toggle="tab" href="#tab-1"> <i class="fa fa-book"></i>Registros </a> </li>
 
-      <li> <a class="nav-link" data-toggle="tab" href="#tab-2"> <i class="fa fa-filter"></i>Filtros  </a> </li>
+      <!--<li> <a class="nav-link" data-toggle="tab" href="#tab-2"> <i class="fa fa-filter"></i>Filtros  </a> </li>-->
     </ul>
     <div class="tab-content">
       <div role="tabpanel" id="tab-1" class="tab-pane active">
         <div class="panel-body">
 
-     
 
 
-              <!--<div class="form-group">
-        <button type="button" class="btn btn-primary btn-outline" data-toggle="modal" data-target="#modalBusqueda"> <i class="fa fa-filter"></i> Parámetros de Búsqueda  </button>
-        <button type="button" class="btn btn-primary btn-outline" data-toggle="modal" data-target="#modalCampeones"> <i class="fa fa-search"></i> Búsqueda de Campeones </button>
-      </div>-->
+          <div class="form-group">
+    <button type="button" class="btn btn-primary btn-outline" data-toggle="modal" data-target="#modalBusqueda"> <i class="fa fa-filter"></i> Parámetros de Búsqueda  </button>
+    <button type="button" class="btn btn-primary btn-outline" data-toggle="modal" data-target="#modalCampeones"> <i class="fa fa-search"></i> Búsqueda de Campeones </button>
+  </div>
 
 
-              <div class="spiner-example" *ngIf="Loading">
-                <div class="sk-spinner sk-spinner-three-bounce form-group">
-                  <div class="sk-bounce1"></div>
-                  <div class="sk-bounce2"></div>
-                  <div class="sk-bounce3"></div>
-                </div>
-              </div>
+          <div class="spiner-example" *ngIf="Loading">
+            <div class="sk-spinner sk-spinner-three-bounce form-group">
+              <div class="sk-bounce1"></div>
+              <div class="sk-bounce2"></div>
+              <div class="sk-bounce3"></div>
+            </div>
+          </div>
 
-              <div class="table-responsive animated fadeInDown" *ngIf="Registros.length > 0 && !Loading">
-                <table class="table table-striped table-bordered table-hover dataTables-example text-center">
-                  <thead>
-                    <tr>
-                      <th class="text-center">Campeon</th>
-                      <th class="text-center">Enemigo</th>
-                      <th class="text-center">Registro</th>
-                      <th class="text-center" *ngIf="!anyRecordEditing()"></th>
-                      <th class="text-center"></th>
-                      <th class="text-center" *ngIf="anyRecordEditing()"></th>
-                      <th class="text-center" *ngIf="anyRecordEditing()"></th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr *ngFor="let r of Registros">
+          <div class="table-responsive  animated fadeInDown" *ngIf="Registros.length > 0 && !Loading">
+            <table class="table invoice-table">
+              <thead>
+                <tr>
+                  <th>Registro</th>
+                  <th >Campeon</th>
+                  <th >Enemigo</th>
+                  <th class="text-center" *ngIf="!anyRecordEditing()"></th>
+                  <th class="text-center"></th>
+                  <th class="text-center" *ngIf="anyRecordEditing()"></th>
+                  <th class="text-center" *ngIf="anyRecordEditing()"></th>
+                </tr>
+              </thead>
+              <tbody>
 
-                      <td width="1" class="text-center" style="vertical-align: middle;">
-                        <div>
-                          <img src="assets/Champions/{{r.Campeon.Nombre}}.png" width="30" height="30" *ngIf="r.Campeon" title="{{r.Campeon.Nombre}}" (click)="openRecord(r.Campeon.Nombre)" style="cursor: pointer;" />
-                          <label *ngIf="!r.Campeon">—</label>
-                        </div>
-                      </td>
+                <tr *ngFor="let r of Registros">
 
-                      <td width="1" class="text-center" style="vertical-align: middle;">
-                        <img *ngIf="r.Enemigo" src="assets/Champions/{{r.Enemigo.Nombre}}.png" width="30" height="30" title="{{r.Enemigo.Nombre}}" (click)="openRecord(r.Enemigo.Nombre)" style="cursor: pointer;" />
-                        <label *ngIf="!r.Enemigo">—</label>
-                      </td>
+                  <td (dblclick)="r.Edit = true" style="cursor: pointer;">
+                    <label *ngIf="!r.Edit">{{r.Error}}</label>
+                    <textarea class="form-control" *ngIf="r.Edit" style="text-align: center;" [(ngModel)]="r.Error">{{r.Error}}</textarea>
+                  </td>
 
-                      <td (dblclick)="r.Edit = true" style="cursor: pointer;">
-                        <label *ngIf="!r.Edit">{{r.Error}}</label>
+                  <td width="1" style="vertical-align: middle; text-align: center">
+                      <img src="assets/Champions/{{r.Campeon.Nombre}}.png" width="30" height="30" *ngIf="r.Campeon" title="{{r.Campeon.Nombre}}" (click)="openRecord(r.Campeon.Nombre)" style="cursor: pointer;" />
+                      <label *ngIf="!r.Campeon">—</label>           
+                  </td>
 
-                        <textarea class="form-control" *ngIf="r.Edit" style="text-align: center;" [(ngModel)]="r.Error">{{r.Error}}</textarea>
-                      </td>
+                  <td width="1" style="vertical-align: middle; text-align: center">
+                    <img *ngIf="r.Enemigo" src="assets/Champions/{{r.Enemigo.Nombre}}.png" width="30" height="30" title="{{r.Enemigo.Nombre}}" (click)="openRecord(r.Enemigo.Nombre)" style="cursor: pointer;" />
+                    <label *ngIf="!r.Enemigo">—</label>
+                  </td>
 
-                      <td width="1" style="vertical-align: middle;">
-                        <a *ngIf="!r.Edit" class="btn btn-white btn-bitbucket" (click)="r.Edit = true"> <i class="fas fa-edit"></i></a>
-                        <a *ngIf="r.Edit" class="btn btn-white btn-bitbucket" (click)="updateRecord(r)"> <i class="fas fa-check"></i></a>
-                      </td>
+
+                  <td width="1" style="vertical-align: middle;">
+                    <a *ngIf="!r.Edit" class="btn btn-white btn-bitbucket" (click)="r.Edit = true"> <i class="fas fa-edit"></i></a>
+                    <a *ngIf="r.Edit" class="btn btn-white btn-bitbucket" (click)="updateRecord(r)"> <i class="fas fa-check"></i></a>
+                  </td>
 
 
 
 
 
-                      <td width="1" style="vertical-align: middle;" *ngIf="anyRecordEditing()">
-                        <a *ngIf="r.Edit" class="btn btn-white btn-bitbucket" (click)="r.Edit = false"> <i class="fas fa-times"></i></a>
-                      </td>
+                  <td width="1" style="vertical-align: middle;" *ngIf="anyRecordEditing()">
+                    <a *ngIf="r.Edit" class="btn btn-white btn-bitbucket" (click)="r.Edit = false"> <i class="fas fa-times"></i></a>
+                  </td>
 
-                      <td width="1" style="vertical-align: middle;">
-                        <a class="btn btn-white btn-bitbucket" (click)="SelectedRecord = r" data-toggle="modal" data-target="#modalDelete"> <i class="fas fa-trash"></i></a>
-                      </td>
+                  <td width="1" style="vertical-align: middle;">
+                    <a class="btn btn-white btn-bitbucket" (click)="SelectedRecord = r" data-toggle="modal" data-target="#modalDelete"> <i class="fas fa-trash"></i></a>
+                  </td>
 
-                    </tr>
+                </tr>
 
 
-                  </tbody>
+              </tbody>
 
-                </table>
-              </div>
+            </table>
+          </div>
 
-              <div class="form-group text-center animated fadeInLeft" *ngIf="Registros.length == 0 && !Loading">
-                <h2>No se han encontrado resultados...</h2>
-              </div>
+          <div class="form-group text-center animated fadeInLeft" *ngIf="Registros.length == 0 && !Loading">
+            <h2>No se han encontrado resultados...</h2>
+          </div>
 
-            
-       
+
+
 
         </div>
       </div>
-      <div role="tabpanel" id="tab-2" class="tab-pane">
+      <!--<div role="tabpanel" id="tab-2" class="tab-pane">
         <div class="panel-body">
 
 
@@ -126,7 +124,7 @@
 
 
         </div>
-      </div>
+      </div>-->
     </div>
 
   </div>
